--- a/style.css
+++ b/style.css
@@ -7,6 +7,9 @@
     display: flex;
     flex-direction: column;
 } */
+.container{
+    width: 100%;
+}
 
 nav{
     display: flex;
@@ -23,7 +26,7 @@ nav>ul>li{
     color: #758283;
 }
 
-nav>ul>li:first-child{
+nav>ul>li:hover{
     font-weight: bolder;
     color: #000000;
 }
@@ -32,16 +35,21 @@ nav>ul{
     display: flex;
     justify-content: space-around;
     position: relative;
-    left: 180px;
+    left: 6%;
 }
 
 nav>button{
-    background-color: #ffffff;
     padding: 15px;
     border-radius: 10px;
     border: 2px solid #4aa8ef;
-    font-size: 25px;
+    background-color: #ffffff;
     color: #4aa8ef;
+    font-size: 25px;
+}
+
+nav>button:hover{
+    background-color:#4aa8ef;
+    color: #ffffff;
 }
 
 .Hosting{
@@ -70,6 +78,12 @@ nav>button{
     border-radius: 10px;
     box-shadow: 1px 1px 3px 1px #0484b2;
     width: 170px;
+}
+
+.content1>button:hover{
+    background: #ffffff;
+    background-color: #ffffff;
+    color: #4aa8ef;
 }
 
 .Hosting>img{
@@ -109,6 +123,12 @@ nav>button{
     width: 170px;
 }
 
+.content2>button:hover{
+    background: #ffffff;
+    background-color: #ffffff;
+    color: #4aa8ef;
+}
+
 
 .Support{
     display: flex;
@@ -140,6 +160,12 @@ nav>button{
     border-radius: 10px;
     box-shadow: 1px 1px 3px 1px #0484b2;
     width: 170px;
+}
+
+.content3>button:hover{
+    background: #ffffff;
+    background-color: #ffffff;
+    color: #4aa8ef;
 }
 
 .Services{
@@ -255,15 +281,16 @@ nav>button{
     width: 160px;
 }
 
+.P-box>button:hover{
+    background: linear-gradient(#08B6F7,#057AEC);
+    
+    color: #ffffff;
+}
+
 .P-box>h2{
     font-size: 30px;
 }
 
-.button{
-    color: #ffffff;
-    background: linear-gradient(#08B6F7,#057AEC);
-    box-shadow: 1px 1px 3px 1px #0484b2;
-}
 
 
 .Customer{
@@ -314,7 +341,7 @@ nav>button{
     left: 70px;
 }
 
-.box1{
+.box:hover{
     background-color: #ffffff;
 }
 
@@ -349,6 +376,11 @@ nav>button{
     width: 150px;
 }
 
+.Worrying>button:hover{
+    color:#000000 ;
+    border: 1px solid #000000;
+}
+
 
 footer{
     padding: 80px 70px 10px 70px;
@@ -373,6 +405,10 @@ footer>ul>li{
     color: #758283;
 }
 
+footer>ul>li:hover{
+    color: #000000;
+}
+
 .head{
     color: #000000;
     font-size: 20px;
@@ -389,8 +425,62 @@ li>img{
 
 
 
+@media screen and (max-width: 1270px) {
+    nav>ul{
+        position: relative;
+        left: 0;
+    }
+}
 
-
+@media screen and (max-width: 950px) {
+    nav>ul>li{
+        margin-left: 10px;
+        font-size: 25px;
+    }
+    .Hosting{
+        flex-direction: column;
+        width: 90%;
+        margin: 30px auto;
+    }
+    .Quality{
+        flex-direction: column;
+        width: 90%;
+        margin: 30px auto;
+    }
+    .Support{
+        flex-direction: column;
+        width: 90%;
+        margin: 30px auto;
+    }
+    .Services{
+        flex-direction: column;
+        width: 90%;
+        margin: 30px auto;
+    }
+    .other{
+        grid-template-columns: repeat(2, 1fr);
+        grid-auto-rows: auto;
+        padding: 50px;
+        width: 90%;
+        margin: 30px auto;
+    }
+    .Pricings{
+        grid-template-columns: repeat(1, 1fr);
+    }
+    .P-box{
+        margin: 30px auto;
+    }
+    .Customers{
+        grid-template-columns: repeat(1, 1fr);
+    }
+    .Worrying{
+        padding: 20px auto;
+    }
+    .content4>h1{
+        font-size: 35px;
+    }
+    
+}
 
 
 
